# cmake-practice-task

./: CMakeLists.txt  README.md  main.cpp
include/: multdivide.h
lib/: CMakeLists.txt  addsub.cpp  multdivide.cpp
